recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:12: error: not found: value rigth
  rigth(120)
  ^HexaKoch:14: error: not found: value rigth
  rigth(120)
  ^HexaKoch:16: error: not found: value rigth
  rigth(120)
  ^HexaKoch:18: error: not found: value rigth
  rigth(120)
  ^